# picovga

./: CMakeLists.txt  README.md  all.sh  build.sh  connect.sh  divider.txt  flash.sh
src/: color.pio  entry.c  hello.pio  lkjsakdlfa.pio  sync.pio
